# project-template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
code/: content.txt
data/: content.txt
derivatives/: content.txt
figures/: content.txt
presentations/: content.txt
test/: content.txt
