[build-system]
requires = [
    "setuptools>=68.0",
    "setuptools-scm[toml]>=8.0",
    "numpy>=1.21.2",
    "scipy",
    "cython~=3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "project_template"
description = "A template for projects in the Schuett-lab at University of Luxembourg"
requires-python = ">=3.10"
authors = [
    {name="Heiko Schütt"},
]
keywords = ["template"]
license = {file = "LICENSE"}
classifiers = [
      'Programming Language :: Python',
      'License :: OSI Approved :: MIT License',
      'Operating System :: OS Independent',
      'Development Status :: 3 - alpha',
      'Topic :: Scientific/Engineering',
      'Intended Audience :: Science/Research',
      'Programming Language :: Python :: 3.10',
      'Programming Language :: Python :: 3.11',
      'Programming Language :: Python :: 3.12',
]
dynamic = ["readme", "dependencies"]
version = "1.0"

[project.urls]
homepage = "https://github.com/Schuett-lab/project-template"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "requirements.txt"}

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "*.py"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-test = "pip install -r tests/requirements.txt"

